<resources>
    <string name="app_name">YaYaXueYu</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_mine">我的</string>
    <string name="home_map">周边学校</string>
    <string name="home_home">首页</string>
    <string name="percent_setting">设置</string>
    <string name="percent_help">帮助与反馈</string>
    <string name="percent_about">关于</string>
    <string name="percent_collection">我的收藏</string>
    <string name="percent_edit">编辑资料</string>
    <string name="title_activity_test">Test</string>
</resources>
