<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomeActivity" >

        <android.support.v4.view.ViewPager
            android:id="@+id/home_main_viewpager"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_above="@+id/home_view"/>

        <View
            android:id="@+id/home_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#e6eaf2"
            android:layout_above="@+id/home_bottom_layout"/>

        <LinearLayout
            android:id="@+id/home_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:id="@+id/home_home_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/home_selector" />

                <TextView
                    android:id="@+id/home_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_home"
                    android:textColor="@color/selector_btn"
                    android:textSize="@dimen/textSize12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_map_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_map_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/home_map_selector" />

                <TextView
                    android:id="@+id/home_map_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_map"
                    android:textColor="@color/selector_btn"
                    android:textSize="@dimen/textSize12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/home_mine_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/home_mine_image"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/home_mine_selector" />

                <TextView
                    android:id="@+id/home_mine_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_mine"
                    android:textColor="@color/selector_btn"
                    android:textSize="@dimen/textSize12" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>