<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/personal_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/icon_mine_back" />

        <ImageView
            android:id="@+id/personal_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_mine_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/personal_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="七里香"
            android:textColor="@color/home_address_text_color"
            android:textSize="@dimen/textSize16"
            android:textStyle="bold"
            android:layout_below="@+id/personal_avatar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            tools:ignore="MissingConstraints" />

        <RelativeLayout
            android:id="@+id/percent_edit_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/personal_banner">

            <ImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_edit"/>

            <TextView
                android:id="@+id/edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/edit_icon"
                android:text="@string/percent_edit"
                android:layout_marginStart="14dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/home_text_color"/>

            <ImageView
                android:id="@+id/edit_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_open"/>
        </RelativeLayout>

        <View
            android:id="@+id/mine_percent_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:background="@color/line_color_1"
            android:layout_below="@+id/percent_edit_layout"/>

        <RelativeLayout
            android:id="@+id/percent_collection_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/mine_percent_line1">

            <ImageView
                android:id="@+id/collection_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_collection"/>

            <TextView
                android:id="@+id/collection_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/collection_icon"
                android:text="@string/percent_collection"
                android:layout_marginStart="14dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/home_text_color"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_open"/>
        </RelativeLayout>

        <View
            android:id="@+id/mine_percent_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color_1"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/percent_collection_layout"/>

        <RelativeLayout
            android:id="@+id/percent_about_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/mine_percent_line2">

            <ImageView
                android:id="@+id/about_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_about"/>

            <TextView
                android:id="@+id/about_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/about_icon"
                android:text="@string/percent_about"
                android:layout_marginStart="14dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/home_text_color"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_open"/>
        </RelativeLayout>

        <View
            android:id="@+id/mine_percent_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color_1"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/percent_about_layout"/>

        <RelativeLayout
            android:id="@+id/percent_help_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/mine_percent_line3">

            <ImageView
                android:id="@+id/help_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_help"/>

            <TextView
                android:id="@+id/help_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/help_icon"
                android:text="@string/percent_help"
                android:layout_marginStart="14dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/home_text_color"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_open"/>
        </RelativeLayout>

        <View
            android:id="@+id/mine_percent_line4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color_1"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/percent_help_layout"/>

        <RelativeLayout
            android:id="@+id/percent_set_layout"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/mine_percent_line4">

            <ImageView
                android:id="@+id/set_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_setting"/>

            <TextView
                android:id="@+id/set_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/set_icon"
                android:text="@string/percent_setting"
                android:layout_marginStart="14dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/textSize15"
                android:textColor="@color/home_text_color"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_mine_open"/>
        </RelativeLayout>

        <View
            android:id="@+id/mine_percent_line5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color_1"
            android:layout_marginStart="27dp"
            android:layout_marginEnd="27dp"
            android:layout_below="@+id/percent_set_layout"/>

    </RelativeLayout>
</layout>